# bactofold-esm

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
examples/: example.fasta
notebooks/: README.md
scripts/: download_esol.sh  make_toy_dataset.py
src/bactofold/: __init__.py  chaperone.py  cli.py  datasets.py  embeddings.py  fasta.py  features.py  modeling.py
src/bactofold_esm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chaperone.py  test_features.py
